<resources>
    <string name="app_name">Addiction2D</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="people">People</string>
    <string name="search">Search...</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character">Char</string>


    <string name="anime_tag">Manga</string>
    <string name="search_without_dot">Search</string>
    <string name="favorite">Favorite</string>
    <string name="random">Random</string>
    <string name="type">Type</string>
    <string name="min_rating">Min Rating</string>
    <string name="max_rating">Max Rating</string>
    <string name="status">Status</string>
    <string name="age_rating">Age Rating</string>
    <string name="genres_settings">Genres Settings</string>
    <string name="include_genres">Include genres</string>
    <string name="write_genres">Write genres...</string>
    <string name="exclude_genres">Exclude genres</string>
    <string name="sfw">SFW</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="type_with_double_dot">Type:</string>
    <string name="year_with_double_dot">Year:</string>
    <string name="status_with_double_dot">Status:</string>
    <string name="rating_with_double_dot">Rating:</string>

</resources>