<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_pink"
    tools:context=".mvvm.AnimeSearchSettings.AnimeSearchSettingsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/type_text_view"
        style="@style/SettingTextView.AnimeSettings"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/min_rating_text_view"
        style="@style/SettingTextView.AnimeSettings"
        android:layout_marginTop="10dp"
        android:text="@string/min_rating"
        app:layout_constraintStart_toStartOf="@id/type_text_view"
        app:layout_constraintTop_toBottomOf="@id/type_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/max_rating_text_view"
        style="@style/SettingTextView.AnimeSettings"
        android:layout_marginTop="10dp"
        android:text="@string/max_rating"
        app:layout_constraintStart_toStartOf="@id/min_rating_text_view"
        app:layout_constraintTop_toBottomOf="@id/min_rating_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/status_text_view"
        style="@style/SettingTextView.AnimeSettings"
        android:layout_marginTop="10dp"
        android:text="@string/status"
        app:layout_constraintStart_toStartOf="@id/max_rating_text_view"
        app:layout_constraintTop_toBottomOf="@id/max_rating_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/age_rating_text_view"
        style="@style/SettingTextView.AnimeSettings"
        android:layout_marginTop="10dp"
        android:text="@string/age_rating"
        app:layout_constraintStart_toStartOf="@id/status_text_view"
        app:layout_constraintTop_toBottomOf="@id/status_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/genres_settings_title"
        style="@style/SettingTextView.AnimeSettings"
        android:layout_marginTop="16dp"
        android:text="@string/genres_settings"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_rating_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/include_genres_text_view"
        style="@style/SettingTextView.AnimeSettings"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/include_genres"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genres_settings_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/include_genres_edit_text"
        style="@style/EditText.Anime"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background_anime"
        android:hint="@string/write_genres"
        android:paddingStart="10dp"
        android:paddingEnd="40dp"
        app:layout_constraintStart_toStartOf="@id/include_genres_text_view"
        app:layout_constraintTop_toBottomOf="@id/include_genres_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exclude_genres_text_view"
        style="@style/SettingTextView.AnimeSettings"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/exclude_genres"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_genres_edit_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/exclude_genres_edit_text"
        style="@style/EditText.Anime"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background_anime"
        android:hint="@string/write_genres"
        android:paddingStart="10dp"
        android:paddingEnd="40dp"
        app:layout_constraintStart_toStartOf="@id/exclude_genres_text_view"
        app:layout_constraintTop_toBottomOf="@id/exclude_genres_text_view" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/sfw_check_box"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:buttonTint="@color/red_pink"
        android:text="@string/sfw"
        android:textColor="@color/red_pink"
        app:layout_constraintStart_toStartOf="@id/exclude_genres_edit_text"
        app:layout_constraintTop_toBottomOf="@id/exclude_genres_edit_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apply_button"
        style="@style/Button"
        android:layout_marginBottom="30dp"
        android:background="@drawable/anime_button_background"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        style="@style/Button"
        android:layout_marginBottom="30dp"
        android:background="@drawable/anime_button_background"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/apply_button" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/add_include_genres_image_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@id/include_genres_edit_text"
        app:layout_constraintEnd_toEndOf="@id/include_genres_edit_text"
        app:layout_constraintTop_toTopOf="@id/include_genres_edit_text" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/add_exclude_genres_image_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@id/exclude_genres_edit_text"
        app:layout_constraintEnd_toEndOf="@id/exclude_genres_edit_text"
        app:layout_constraintTop_toTopOf="@id/exclude_genres_edit_text" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/type_spinner"
        style="@style/Spinner"
        android:background="@drawable/stroke_anime"
        app:layout_constraintBottom_toBottomOf="@id/type_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/type_spinner_items"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/min_rating_spinner"
        style="@style/Spinner"
        android:background="@drawable/stroke_anime"
        app:layout_constraintBottom_toBottomOf="@id/min_rating_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/rating_spinner_item"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/max_rating_spinner"
        style="@style/Spinner"
        android:background="@drawable/stroke_anime"
        app:layout_constraintBottom_toBottomOf="@id/max_rating_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/rating_spinner_item"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/status_spinner"
        style="@style/Spinner"
        android:background="@drawable/stroke_anime"
        app:layout_constraintBottom_toBottomOf="@id/status_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/status_spinner_items"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/age_rating_spinner"
        style="@style/Spinner"
        android:background="@drawable/stroke_anime"
        app:layout_constraintBottom_toBottomOf="@id/age_rating_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/age_rating_items"/>


</androidx.constraintlayout.widget.ConstraintLayout>