<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white_pink"
    tools:context=".mvvm.Char.CharStartFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/searchCharCard"
        style="@style/NavigateCard.CharNavigateCard"
        android:layout_marginTop="0dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/NavigateTextView.CharNavigateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_without_dot" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/favoriteCharCard"
        style="@style/NavigateCard.CharNavigateCard">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/NavigateTextView.CharNavigateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite">

        </androidx.appcompat.widget.AppCompatTextView>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/randomCharCard"
        style="@style/NavigateCard.CharNavigateCard">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/NavigateTextView.CharNavigateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random">

        </androidx.appcompat.widget.AppCompatTextView>

    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>