<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="@color/transparent"
    app:cardCornerRadius="30dp"
    app:strokeColor="@color/red_pink"
    app:strokeWidth="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_for_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="20dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/red_pink"
            app:strokeWidth="4dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/stub_image" />


        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="290dp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_text_view"
            style="@style/SettingTextView.AnimeSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_for_image"
            app:layout_constraintTop_toTopOf="@id/card_for_image"
            tools:text="Title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/type_text_view_on_item"
            style="@style/TextOnItem.Anime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/type_with_double_dot"
            app:layout_constraintStart_toEndOf="@id/card_for_image"
            app:layout_constraintTop_toBottomOf="@id/title_text_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/type_text_view_on_item_result"
            style="@style/TextOnItem.Anime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"
            tools:text="type" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/year_text_view_on_item" style="@style/TextOnItem.Anime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/year_with_double_dot"
            app:layout_constraintStart_toEndOf="@id/card_for_image"
            app:layout_constraintTop_toBottomOf="@id/type_text_view_on_item" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/year_text_view_on_item_result"
            style="@style/TextOnItem.Anime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/year_text_view_on_item"
            tools:text="2022" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/status_text_view_on_item"
            style="@style/TextOnItem.Anime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/status_with_double_dot"
            app:layout_constraintStart_toEndOf="@id/card_for_image"
            app:layout_constraintTop_toBottomOf="@id/year_text_view_on_item" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/status_text_view_on_item_result"
            style="@style/TextOnItem.Anime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/status_text_view_on_item"
            tools:text="Airing" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rating_text_view_on_item"
            style="@style/TextOnItem.Anime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/rating_with_double_dot"
            app:layout_constraintStart_toEndOf="@id/card_for_image"
            app:layout_constraintTop_toBottomOf="@id/status_text_view_on_item" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rating_text_view_on_item_result"
            style="@style/TextOnItem.Anime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
           app:layout_constraintBottom_toBottomOf="@id/rating_text_view_on_item"
            tools:text="PG-13" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/heart_image_view"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintTop_toBottomOf="@id/rating_text_view_on_item"
            app:layout_constraintStart_toStartOf="@id/rating_text_view_on_item"
            android:src="@drawable/ic_heart"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/heart_text_view_on_item_result"
            style="@style/TextOnItem.Anime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/heart_image_view"
            tools:text="PG-13" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>